# CiscoDSA_mqtt_app

./: README.md
CiscoDSA/: Compile sdk-dslink-c.md  Dht11Sensor Data Publish on CiscoDSA.md
CiscoDSA/RpiDht_IotDsa-C/: CMakeLists.txt  dht11.c
CiscoDSA/RpiDht_IotDsa-C/include/: dht11.h
CiscoDSA/RpiDht_IotDsa-C/src/: dht11.c  main.c  rng.c
ThingspaceDweet/: Streamdata.py  post.py
